# transblock

./: .gitignore  CLAUDE.md  cfg.out  mixblock.out  output_ref_outputids.out  pyproject.toml
configs/: qwen3-4b-draft-config.json  qwen3p5-4b-dflash.json
examples/: run_qwen3_4b_dflash_online.sh
scripts/: build_bigram.py  build_bigram.sh  example.py  gsm8k_dflash_baseline.py  gsm8k_mixblocksize.py  math500_baseline.py  math500_cfg.py  prepare_data.py  regenerate_train_data.py  regenerate_train_data.sh  start_server.sh  train_blockflash.py  train_dflash.py  wandb.py
specforge/core/: blockflash.py  dflash.py
specforge/modeling/draft/: dflash.py
